@@ -39,13 +39,13 @@ namespace Bindings {
 class RootObject;
 
 typedef RootObject* (*CreateRootObjectFunction)(void* nativeHandle);
-typedef HashCountedSet<JSObject*> ReferencesSet;
+typedef HashCountedSet<JSObject*> ProtectCountSet;
 
-extern ReferencesSet* findReferenceSet(JSObject *imp);
-extern const RootObject* rootObjectForImp(JSObject*);
-extern const RootObject* rootObjectForInterpreter(Interpreter*);
-extern void addNativeReference (const RootObject *root, JSObject *imp);
-extern void removeNativeReference (JSObject *imp);
+extern ProtectCountSet* findProtectCountSet(JSObject*);
+extern const RootObject* findRootObject(JSObject*);
+extern const RootObject* findRootObject(Interpreter*);
+extern void addNativeReference(const RootObject*, JSObject*);
+extern void removeNativeReference(JSObject*);
 
 class RootObject
 {
